# rcpyci

./: .gitignore  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
rcpyci/: consts.py  core.py  im_ops.py  infoval.py  interface.py  pipelines.py  requirements.txt  utils.py  visualise.py
rcpyci/tests/: test_X.py
ref/: README.md  test_ci_functions.py  test_generate_functions.py  test_generate_functions_old.py
ref/data/: params.npy
ref/pyrcicr_ref/: README.md  requirements.txt  requirements_rpy2.txt  setup.py
ref/pyrcicr_ref/pyrcicr_ref/: autoscale.py  batchGenerateCI.py  batchGenerateCI2IFC.py  computeCumulativeCICorrelation.py  computeInfoVal2IFC.py  generateCI.py  generateCI2IFC.py  generateCINoise.py  generateReferenceDistribution2IFC.py  generateStimuli2IFC.py  generate_noise.py  simulateNoiseIntensities.py
ref/rcicr/R/: generateCI.R  generateNoisePattern.R  mingennoise.R
tests/: Dockerfile.test  run_tests.sh  setup_env.sh  setup_pyenv.sh  test_X.py  test_generate_functions_old.py
tests/pyrcicr_ref/: README.md  setup.py
tests/pyrcicr_ref/pyrcicr_ref/: computeCumulativeCICorrelation.py  deg2rad.py  generateCI.py  generateNoiseImage.py  generateReferenceDistribution2IFC.py  plotZMap.py
tests/rcicr/R/: generateStimuli2IFC.R
