[tool.poetry]
name = "rcpyci"
version = "0.10.0"
description = "Toolkit for reverse correlation classificiation images"
authors = ["hvalev"]
license = "MIT"
maintainers = ["hvalev"]
readme = "README.md"
homepage = "https://github.com/hvalev/rcpyci"
repository = "https://github.com/hvalev/rcpyci"
documentation = "https://github.com/hvalev/rcpyci"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "rcpyci" }]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.2"
pillow = "^10.3.0"
numpy = "^1.24.4"
scipy =  "^1.13.1"
streamlit = "^1.42.0"
joblib = "^1.4.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"

[tool.poetry.group.test.dependencies]

[tool.poetry.extras]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 160
extend-include = ["*.ipynb"]
exclude = ["ref/"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.ruff.lint]
# E = pycodestyles (default)
# F = pyflakes (default)
# B = flake8-bugbear (extra)
# I = isort (extra)
select = ["E", "F", "B", "I"]